--- a/assets/css/semantic.css
+++ b/assets/css/semantic.css
@@ -6,7 +6,7 @@
 /* Font Family */
 body {
   font-family: "Figtree", "DM Sans", Helvetica, Arial, sans-serif;
-  color: var(--color-secondary-dark);
+  color: var(--color-secondary);
 }
 
 .serif {
@@ -18,7 +18,7 @@ body {
 }
 
 .font-white {
-  color: var(--color-white);
+  color: var(--color-primary-lightest);
 }
 
 /* Heading Style */
@@ -32,10 +32,24 @@ h4 {
 p,
 a,
 body {
-  font-weight: 400;
+  font-weight: 500;
 }
 
 /* Header */
 header {
   position: relative;
+}
+
+.text-gray {
+  color: var(--color-gray);
+}
+
+/* selection color */
+*::selection {
+  background-color: var(--color-primary);
+  color: var(--color-secondary);
+}
+
+body {
+  /* background-color: var(--color-primary-lightest); */
 }
