--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -12,8 +12,6 @@
   transform: translateX(-50%);
   width: 100%;
   align-items: center;
-
-  /* background-color: var(--color-primary-lightest); */
 }
 
 #navbar-menu {
@@ -74,20 +72,9 @@
 }
 
 /* Highlight ----------------------------*/
+
 #highlight {
   width: 66.66666%;
-  padding: 0;
-  background-image: linear-gradient(
-      to left top,
-      var(--color-primary-filter),
-      var(--color-secondary-filter)
-    ),
-    url("../../data/insights/thumbnail/test.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-clip: content-box;
-
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -182,25 +169,14 @@
   justify-content: space-between;
 }
 
-.component-card-awards {
+#awards-list {
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
   gap: 1.6rem;
 }
 
-.component-card-awards > div {
+.card-awards {
   min-height: 55rem;
-
-  background-image: linear-gradient(
-      to left top,
-      var(--color-primary-filter),
-      #121212b9
-    ),
-    url("../../data/insights/thumbnail/test.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-clip: content-box;
 
   display: flex;
   flex-direction: column;
@@ -210,25 +186,22 @@
   border-radius: 1.6rem;
 }
 
-.component-card-awards > div > div {
+.card-awards:first-child .card-awards-container {
+  padding: 12rem;
+  transform: scale(1.3);
+}
+
+.card-awards-container {
   text-align: center;
   padding: 1.6rem;
 }
 
-.component-card-awards > div > div > h1 {
-  letter-spacing: 2px;
+.card-awards-label label {
   text-transform: capitalize;
-}
-
-.component-card-awards > div > div > p {
-  text-transform: capitalize;
-}
-
-.label-square p {
   display: inline-block;
   border-top: solid 0.1rem var(--color-primary-lightest);
   border-bottom: solid 0.1rem var(--color-primary-lightest);
-  font-weight: 500;
+  font-weight: 600;
   letter-spacing: 1.5px;
   text-transform: uppercase;
   padding: 0.4rem 1.6rem;
@@ -342,4 +315,17 @@
 #savedForLater .section-title {
   display: flex;
   justify-content: space-between;
+}
+
+.savedForLater-card {
+  background-image: linear-gradient(
+      to left top,
+      var(--color-primary-filter),
+      var(--color-secondary-filter)
+    ),
+    url("../../data/insights/thumbnail/test.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-clip: content-box;
 }
