--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -18,6 +18,8 @@
   --color-gray: #767c8f;
   --color-gray-dark: #3b3e48;
 
+  --color-mint-light: #e0f5ef;
+
   --color-secondary-filter: #121212b9;
   --color-white: #fbfcf6;
 
