--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -15,9 +15,9 @@
 
 #navbar-menu {
   width: 66.66666%;
-
   display: flex;
   justify-content: start;
+  gap: 6.4rem;
   align-items: end;
 }
 
@@ -27,21 +27,11 @@
   filter: brightness(0) invert(1);
 }
 
-#navbar-items {
-  display: flex;
-  justify-content: center;
-  gap: 3.2rem;
-  margin: 0 auto;
-}
-
-#navbar-items a {
+.menu-item {
   letter-spacing: 0.5px;
   font-weight: 500;
   text-transform: uppercase;
-  text-align: center;
   padding-bottom: 0;
-
-  color: var(--color-white);
 }
 
 #navbar-personals {
@@ -137,18 +127,18 @@
   background-color: var(--color-secondary-light);
 }
 
-#topTopics-list {
+#topTopics-content .topics-list {
   display: flex;
   flex-wrap: wrap;
   row-gap: 3.2rem;
   column-gap: 14.4rem;
 }
 
-#topTopics-list li a {
+#topTopics-content .topics-list li a {
   display: flex;
 }
 
-#topTopics-list li a > div {
+#topTopics-content .topics-list li a > div {
   width: 3.2rem;
   height: 3.2rem;
   display: flex;
@@ -158,7 +148,7 @@
   border-radius: 50%;
 }
 
-#topTopics-list li a > div > p {
+#topTopics-content .topics-list li a > div > p {
   color: var(--color-primary-lightest);
 }
 
@@ -417,4 +407,39 @@
 
 .featured-authors-viewAll {
   justify-content: flex-end;
+}
+
+/* Footer --------------------- */
+#footer-sitemap {
+  color: var(--color-gray);
+  display: grid;
+  grid-template-columns: 3fr 3fr 1.5fr 1.5fr 3fr;
+  grid-template-rows: auto auto;
+  gap: 1.6rem;
+
+  border-top: solid 1px var(--color-secondary-light);
+  padding-top: 6.4rem;
+}
+
+#footer-copyright {
+  color: var(--color-gray);
+  margin-top: 6.4rem;
+}
+
+#footer-logo img {
+  width: 14rem;
+}
+
+#footer-topics .topics-list li a > div {
+  display: none;
+}
+
+#footer-topics .topics-list li a > h1 {
+  font-size: inherit;
+  letter-spacing: inherit;
+}
+
+#footer-copyright {
+  grid-column: 1 / -1;
+  text-align: center;
 }
