--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -32,28 +32,26 @@
   text-transform: uppercase;
   padding-bottom: 0;
   position: relative;
-  color: var(--color-white);
+  color: #fff;
 
-  opacity: 1;
+  opacity: 0.8;
   transition: opacity 0.15s ease;
 }
 
 .menu__item:hover {
-  opacity: 0.7;
+  opacity: 1;
 }
 
 .menu__item::after {
   position: absolute;
   z-index: 20;
   content: "";
-  width: 0.6rem;
-  height: 0.6rem;
-  border-radius: 50%;
-  bottom: -50%;
+  width: 100%;
+  height: 100%;
+  bottom: -16%;
   left: 50%;
   transform: translateX(-50%);
-
-  background-color: var(--color-white);
+  border-bottom: solid 2px #fff;
   opacity: 0;
 }
 
