--- a/assets/css/reusable-utils.css
+++ b/assets/css/reusable-utils.css
@@ -226,6 +226,14 @@
   outline: 0.2rem solid var(--color-white);
 }
 
+.topic:hover,
+.topic--white:hover {
+  cursor: pointer;
+  background-color: var(--color-secondary);
+  outline-color: var(--color-secondary);
+  color: var(--color-white);
+}
+
 /* Button: An icon with circled button 24px */
 .btn--circle-m {
   width: 2.4rem;
