--- a/assets/css/specific.css
+++ b/assets/css/specific.css
@@ -73,12 +73,12 @@
 }
 
 /* Highlight -------------------------- */
-.highlights--wrapper {
+#highlights {
   display: grid;
   grid-template-columns: 2fr 1fr;
 }
 
-/* Coverage ----------------------------*/
+/* Cover ----------------------------*/
 #cover {
   position: relative;
 }
@@ -111,41 +111,29 @@
   font-size: 1.6rem;
 }
 
+.slide-controller__btn:hover {
+  opacity: 0.8;
+}
+
 /* Editor's Pick ----------------------------*/
 #editorsPick {
-  padding: 6.4rem 3.2rem 3.2rem 3.2rem;
+  padding-bottom: 3.2rem;
   background-color: var(--color-primary-light);
 }
 
-#editorsPick-primary {
-  border-bottom: solid 0.1rem #000;
+.editorsPick__cover {
+  border-bottom: solid 0.1rem var(--color-secondary);
   padding-bottom: 3.2rem;
   margin-bottom: 3.2rem;
 }
 
-#editorsPick-primary .section-img {
-  height: 32dvh;
-}
-
-#editorsPick-primary .section-img img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  object-position: center;
-}
-
-#editorsPick-secondary-list {
+.editorsPick__list {
   list-style: disc;
   margin-left: 1.6rem;
 }
 
-#editorsPick-secondary-list li::marker {
-  font-size: initial;
-}
-
-#editorsPick .component-viewAll {
-  display: flex;
-  justify-content: end;
+.editorsPick__list-txt {
+  font: inherit;
 }
 
 /* Top Topics ----------------------------*/
@@ -179,7 +167,7 @@
 }
 
 /* Monthly Awards ----------------------------*/
-#monthlyAwards .section-title {
+#monthlyAwards .section__title {
   display: flex;
   justify-content: space-between;
 }
@@ -303,11 +291,11 @@
   border-bottom: none;
 }
 
-.trending-list-item .section-img {
+.trending-list-item .section__img {
   width: 30rem;
 }
 
-.trending-list-item .section-img img {
+.trending-list-item .section__img img {
 }
 
 #newsletter {
@@ -315,7 +303,7 @@
   grid-row: 2 / 3;
 }
 
-#trending .section-title {
+#trending .section__title {
   display: flex;
   justify-content: space-between;
 }
@@ -327,7 +315,7 @@
 }
 
 /* Saved For Later ----------------------------*/
-#savedForLater .section-title {
+#savedForLater .section__title {
   display: flex;
   justify-content: space-between;
 }
@@ -413,7 +401,7 @@
   border-bottom: none;
 }
 
-#latest-list .section-img {
+#latest-list .section__img {
   width: 33.3333%;
 }
 
